# liquid

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-mcp.yml  publish.yml
benchmarks/: RESULTS.md
benchmarks/tasks/: task_06_cross_api_normalize.py
docs/: ARCHITECTURE.md  EXTENDING.md  OSS-VS-CLOUD.md  QUICKSTART.md  SPEC-WRITE-OPERATIONS.md  pep541-request.md
docs/blog/: how-i-built-liquid.md  launch-posts.md
examples/: 01_search_with_dsl.py  02_aggregate_revenue.py  03_text_search_tickets.py  04_intent_charge_customer.py  05_recover_from_401.py  06_estimate_before_fetch.py  07_max_tokens_cap.py  08_fetch_until_predicate.py  09_fetch_changes_since.py  10_search_nl.py  11_canonical_money.py  12_to_tools_mcp.py  13_auth_schemes.py  14_webhook_inbound.py  15_streaming.py  16_evolution_signals.py  17_semantic_recovery.py  18_observability.py  19_intent_breadth.py  20_judicial_pilot.py  20_no_llm_runtime.py  README.md  _commercial_rents.py  anthropic_tools.py  langchain_agent.py  live_quickstart.py  openai_agents.py
src/liquid/: __init__.py  _defaults.py  client.py  estimate.py  events.py  exceptions.py  mcp_server.py  persistence.py  protocols.py  tools.py
src/liquid/action/: batch.py  executor.py
src/liquid/adapters/: __init__.py
src/liquid/agent_tools/: __init__.py  query.py
src/liquid/auth/: __init__.py  manager.py  schemes.py
src/liquid/connectors/: __init__.py  smartcar.py
src/liquid/discovery/: __init__.py  base.py  browser.py  diff.py  email.py  graphql.py  mcp.py  openapi.py  postgres.py  rest_heuristic.py  sse.py  utils.py
src/liquid/intent/: models.py  registry.py
src/liquid/llm/: __init__.py
src/liquid/mapping/: proposer.py
src/liquid/models/: __init__.py  action.py  adapter.py  response.py  schema.py  sync.py
src/liquid/normalize/: __init__.py  money.py
src/liquid/query/: __init__.py  _paginator.py
src/liquid/sync/: __init__.py  engine.py  fetcher.py  mapper.py  pagination.py  rate_limiter.py  retry.py  selector.py
src/liquid/transport/: __init__.py  _mail.py  _sql.py  base.py  duckdb_driver.py  html_scrape.py  imap_driver.py  mcp_driver.py  mongodb.py  mssql.py  mysql.py  neo4j_driver.py  postgres.py  redis_driver.py  smtp_driver.py  sqlite.py  sse.py  websocket.py
src/liquid/webhooks/: __init__.py
tests/: test_authed_discovery.py  test_bundled_adapters.py  test_client.py  test_client_write.py  test_defaults.py  test_estimate.py  test_events.py  test_exceptions.py  test_exceptions_recovery.py  test_fetch_changes.py  test_fetch_until.py  test_fetch_with_meta.py  test_file_vault_encryption.py  test_get_or_create.py  test_http_catalog_registry.py  test_llm_extra_hints.py  test_mail_surface.py  test_mcp_execute.py  test_meta_block.py  test_no_llm_fetch.py  test_oss_mcp.py  test_protocols.py  test_readme_links.py  test_recovery_structured.py  test_registry.py  test_search.py  test_search_nl.py  test_self_heal.py  test_smoke.py  test_ssrf.py  test_state_tools.py  test_tool_metadata.py  test_tools.py  test_truncate.py  test_verbosity.py
tests/fixtures/: graphql_introspection.json  petstore_openapi.json  petstore_openapi.yaml
tests/test_action/: test_batch.py  test_builder.py  test_executor.py  test_path.py  test_proposer.py  test_reviewer.py  test_validator.py
tests/test_auth/: test_classifier.py  test_manager.py  test_schemes.py
tests/test_cache/: test_fetcher_cache.py  test_key.py  test_memory.py  test_ttl.py
tests/test_connectors/: test_home_assistant.py  test_smartcar.py  test_telegram.py
tests/test_discovery/: test_a2a.py  test_browser.py  test_diff.py  test_discovery_method_literals.py  test_duckdb.py  test_fingerprint.py  test_graphql.py  test_graphql_write.py  test_html_scrape_discovery.py  test_manifest.py  test_mcp.py  test_mcp_write.py  test_mongodb.py  test_mssql.py  test_mysql.py  test_neo4j.py  test_openapi.py  test_openapi_write.py  test_pipeline.py  test_plugin_manifest.py  test_postgres.py  test_redis.py  test_rest_heuristic.py  test_sqlite.py  test_sse.py  test_wsdl.py
tests/test_evolution/: test_signals.py
tests/test_integration/: test_real_discovery.py
tests/test_intent/: test_execute_intent.py  test_executor.py  test_registry.py
tests/test_mapping/: test_learning.py  test_proposer.py  test_reviewer.py
tests/test_models/: test_adapter.py  test_llm.py  test_schema.py  test_sync.py
tests/test_normalize/: test_canonical.py  test_datetime.py  test_ids.py  test_integration.py  test_money.py  test_pagination.py
tests/test_observability/: test_events.py
tests/test_query/: test_aggregate.py  test_dsl.py  test_engine.py  test_integration.py  test_text_search.py  test_translator.py
tests/test_runtime/: test_sense_loop.py  test_windowing.py
tests/test_streaming/: test_parsers.py
tests/test_sync/: test_auto_repair.py  test_engine.py  test_fetcher.py  test_known_limits.py  test_mapper.py  test_pagination.py  test_rate_limiter.py  test_retry.py  test_selector.py  test_transform.py
tests/test_telemetry/: test_anonymize.py  test_collector.py
tests/test_transport/: test_a2a_driver.py  test_adb_driver.py  test_bacnet_driver.py  test_db_write.py  test_driver_dispatch.py  test_gmail.py  test_graphql_driver.py  test_grpc_driver.py  test_html_scrape_driver.py  test_mail.py  test_mail_oauth2.py  test_manifest.py  test_mcp_driver.py  test_mcp_sense.py  test_modbus_driver.py  test_mongodb_driver.py  test_mqtt_driver.py  test_neo4j_driver.py  test_opcua_driver.py  test_postgres_driver.py  test_redis_driver.py  test_sense.py  test_sense_e2e.py  test_sense_resilience.py  test_soap_driver.py  test_sql_core.py  test_sql_write.py  test_streaming_sense.py  test_websocket_driver.py
tests/test_validation/: test_validator.py
tests/test_webhooks/: test_listener.py  test_verifier.py
