[project]
name = "liquid-api"
version = "0.18.0"
description = "Zapier for AI agents. Connect to any API on the fly."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
keywords = ["api", "discovery", "sync", "adapter", "openapi", "graphql", "mcp", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ertad-family/liquid"
Documentation = "https://github.com/ertad-family/liquid/blob/main/docs/QUICKSTART.md"
Repository = "https://github.com/ertad-family/liquid"
Issues = "https://github.com/ertad-family/liquid/issues"
Changelog = "https://github.com/ertad-family/liquid/blob/main/CHANGELOG.md"

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liquid"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["liquid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
