[project]
name = "liquid-api"
version = "0.65.0"
description = "Connect your AI agent to anything — no connector to write or maintain. One fetch/query/write/sense API over web APIs, databases, agents, IoT, and industrial/OT (Modbus/OPC UA/BACnet)."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
keywords = ["api", "discovery", "sync", "adapter", "openapi", "graphql", "mcp", "llm", "ai", "postgres", "mysql", "sqlite", "sql", "neo4j", "graph", "duckdb", "mssql", "mongodb", "redis", "nosql", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    # The bundled MCP server (`liquid-mcp` console script) is a first-class
    # feature, so `mcp` is a core dep — `liquid-mcp` works after a plain install
    # and `uv sync` (no extra needed). Avoids a ModuleNotFoundError footgun.
    "mcp>=1.0",
    # FileVault encrypts credentials at rest (Fernet). A security primitive for the
    # default credential store is core, not optional — unlike provider SDKs.
    "cryptography>=42",
]

[project.scripts]
liquid-mcp = "liquid.mcp_server:main"

[project.urls]
Homepage = "https://github.com/ertad-family/liquid"
Documentation = "https://github.com/ertad-family/liquid/blob/main/docs/QUICKSTART.md"
Repository = "https://github.com/ertad-family/liquid"
Issues = "https://github.com/ertad-family/liquid/issues"
Changelog = "https://github.com/ertad-family/liquid/blob/main/CHANGELOG.md"

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
mcp = []  # `mcp` is now a core dependency; kept for back-compat (`liquid-api[mcp]` still resolves)
gemini = [
    "google-genai>=0.3",
]
anthropic = [
    "anthropic>=0.40",
]
litellm = [
    "litellm>=1.0",
]
# One umbrella so discovery of spec-less REST APIs + field mapping works out of
# the box: LiteLLM reaches OpenAI / Gemini / Anthropic / local / 100+ providers
# (set LIQUID_LLM_PROVIDER=litellm, LIQUID_LLM_MODEL=...). Self-describing APIs
# (OpenAPI/GraphQL/gRPC/MCP/WSDL) and all databases need no LLM at all.
discovery = [
    "litellm>=1.0",
]
grpc = [
    "grpcio>=1.60",
    "grpcio-reflection>=1.60",
    "protobuf>=4.25",
]
ws = [
    "websockets>=12.0",
]
pg = [
    # Postgres-as-an-interface: schema introspection + read driver, incl. pgvector
    # similarity search. asyncpg is async-native and pulls no ORM.
    "asyncpg>=0.29",
]
mysql = [
    # MySQL / MariaDB-as-an-interface. SQLite needs no extra (stdlib sqlite3).
    "aiomysql>=0.2",
]
neo4j = [
    # Neo4j graph-as-an-interface: labels/relationship types as endpoints, Cypher.
    "neo4j>=5.0",
]
duckdb = [
    # DuckDB-as-an-interface (embedded analytics DB; sync client run off-thread).
    "duckdb>=0.10",
]
mssql = [
    # SQL Server-as-an-interface over ODBC. Also needs a system ODBC driver.
    "aioodbc>=0.4",
]
mongodb = [
    # MongoDB-as-an-interface: collections as endpoints (async pymongo).
    "pymongo>=4.9",
]
redis = [
    # Redis-as-an-interface: keyspace namespaces as endpoints.
    "redis>=5.0",
]
mqtt = [
    # MQTT-as-an-interface: IoT pub/sub — subscribe (sense), publish (write).
    "aiomqtt>=2.0",
]
modbus = [
    # Modbus-as-an-interface: industrial register read/write (PLCs, sensors).
    "pymodbus>=3.5",
]
opcua = [
    # OPC UA-as-an-interface: Industry-4.0 node read/write + native subscriptions.
    "asyncua>=1.0",
]
bacnet = [
    # BACnet-as-an-interface: building automation (HVAC/BMS) object read/write.
    "bacpypes3>=0.0.100",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
    "pre-commit>=4.0",
    # In-process MQTT broker for the live MQTT round-trip test (self-skips if absent).
    "amqtt>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liquid"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["liquid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: end-to-end tests that reach external services (deselect with '-m \"not network\"')",
    "integration: tests that hit real third-party APIs (deselect with '-m \"not integration\"')",
]
